--- a/Auftragsmanagement-System/Auftragsmanagement-System.csproj
+++ b/Auftragsmanagement-System/Auftragsmanagement-System.csproj
@@ -81,15 +81,22 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Framework\NHibernateHelper.cs" />
+    <Compile Include="Framework\RelayCommand.cs" />
     <Compile Include="Framework\Repository.cs" />
+    <Compile Include="Framework\StringValueAttribut.cs" />
+    <Compile Include="Framework\ViewModelBase.cs" />
     <Compile Include="Mappings\AddressMap.cs" />
+    <Compile Include="Mappings\CityMap.cs" />
+    <Compile Include="Mappings\CountryMap.cs" />
     <Compile Include="Mappings\EmployeeMap.cs" />
+    <Compile Include="Mitarbeiterverwaltung\Controller\MitarbeiterverwaltungController.cs" />
+    <Compile Include="Mitarbeiterverwaltung\ViewModel\MitarbeiterverwaltungViewModel.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\City.cs" />
-    <Compile Include="Models\CodeFile1.cs" />
+    <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Employee.cs" />
-    <Compile Include="Mitarbeiterverwaltung\View\UserControl1.xaml.cs">
-      <DependentUpon>UserControl1.xaml</DependentUpon>
+    <Compile Include="Mitarbeiterverwaltung\View\MitarbeiterverwaltungView.xaml.cs">
+      <DependentUpon>MitarbeiterverwaltungView.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -103,7 +110,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Mitarbeiterverwaltung\View\UserControl1.xaml">
+    <Page Include="Mitarbeiterverwaltung\View\MitarbeiterverwaltungView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -139,7 +146,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Mitarbeiterverwaltung\ViewModel\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
