--- a/Auftragsmanagement-System/Auftragsmanagement-System.csproj
+++ b/Auftragsmanagement-System/Auftragsmanagement-System.csproj
@@ -191,7 +191,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Database\CompanyManagementSystem.db" />
+    <None Include="Database\CompanyManagementSystem.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Database\CompanyManagementSystem_leer.db" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
